# ChangeLog for dev-python/clint
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/clint/ChangeLog,v 1.5 2014/10/22 03:40:21 alunduil Exp $

  22 Oct 2014; Alex Brandt <alunduil@gentoo.org> clint-0.3.1-r1.ebuild:
  add python3_4 target to 0.3.1-r1

  19 Oct 2014; Alex Brandt <alunduil@gentoo.org> -clint-0.3.1.ebuild:
  drop 0.3.1; keep three

*clint-0.4.1 (19 Oct 2014)

  19 Oct 2014; Alex Brandt <alunduil@gentoo.org> +clint-0.4.1.ebuild:
  add version 0.4.1

*clint-0.3.1-r1 (11 Oct 2014)

  11 Oct 2014; Ian Delaney <idella4@gentoo.org> +clint-0.3.1-r1.ebuild,
  +files/clint-setup.patch:
  revbump; add patch to correct install of data files to a most unexpected
  location in only 0.3.1, authority given to commit by maintainer

*clint-0.3.7 (07 Oct 2014)
*clint-0.3.1 (07 Oct 2014)

  07 Oct 2014; Alex Brandt <alunduil@gentoo.org> +clint-0.3.1.ebuild,
  +clint-0.3.7.ebuild, +metadata.xml:
  add ebuild written by me