@@ -1,6 +1,6 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/clint/clint-0.4.1.ebuild,v 1.1 2014/10/19 20:17:06 alunduil Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/clint/clint-0.4.1.ebuild,v 1.2 2015/05/18 03:38:29 patrick Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python2_7 python3_3 python3_4 )
@@ -13,7 +13,7 @@ SRC_URI="https://github.com/kennethreitz/${PN}/archive/v${PV}.tar.gz -> ${P}.tar
 
 LICENSE="ISC"
 SLOT="0"
-KEYWORDS="~amd64"
+KEYWORDS="~x86 ~amd64"
 IUSE="doc examples test"
 
 DEPEND="
