@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/clint
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/clint/ChangeLog,v 1.5 2014/10/22 03:40:21 alunduil Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/clint/ChangeLog,v 1.6 2015/05/18 03:38:29 patrick Exp $
+
+  18 May 2015; Patrick Lauer <patrick@gentoo.org> clint-0.4.1.ebuild:
+  Keyword for ~x86
 
   22 Oct 2014; Alex Brandt <alunduil@gentoo.org> clint-0.3.1-r1.ebuild:
   add python3_4 target to 0.3.1-r1
